--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Kumanoayumi.github.com</h1>
+        <h1>Kumanoayumi/h1>
         <p></p>
 
 
